INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CLHCO_SRC lhco.cc)
ADD_LIBRARY(CLHCO SHARED ${CLHCO_SRC})
TARGET_LINK_LIBRARIES(CLHCO ${ROOT_LIBRARIES})
SET(LIBRARY_TARGET ${LIBRARY_TARGET} CLHCO)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(testparse_SRC testparse.cc)
  ADD_EXECUTABLE(testparse ${testparse_SRC})
  TARGET_LINK_LIBRARIES(testparse CLHCO)
  SET(EXECUTABLE_TARGET ${EXECUTABLE_TARGET} testparse)
  SET_TARGET_PROPERTIES(testparse PROPERTIES INSTALL_RPATH "@loader_path/../lib")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

INSTALL(TARGETS ${EXECUTABLE_TARGET} ${LIBRARY_TARGET}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

FILE(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${HEADERS} DESTINATION include/${CMAKE_PROJECT_NAME})