INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CLHCO_SRC lhco.cc parser.cc object.cc event.cc momentum.cc)
ADD_LIBRARY(CLHCO SHARED ${CLHCO_SRC})
TARGET_LINK_LIBRARIES(CLHCO ${ROOT_LIBRARIES})
SET(LIBRARY_TARGET ${LIBRARY_TARGET} CLHCO)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(test_parse_SRC test_parse.cc)
  ADD_EXECUTABLE(test_parse ${test_parse_SRC})
  TARGET_LINK_LIBRARIES(test_parse CLHCO)
  SET(EXECUTABLE_TARGET ${EXECUTABLE_TARGET} test_parse)
  SET_TARGET_PROPERTIES(test_parse PROPERTIES INSTALL_RPATH "@loader_path/../lib")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

INSTALL(TARGETS ${EXECUTABLE_TARGET} ${LIBRARY_TARGET}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

FILE(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${HEADERS} DESTINATION include/${CMAKE_PROJECT_NAME})