INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CLHCO_SRC lhco.cc parser.cc object.cc particle.cc event.cc)
ADD_LIBRARY(CLHCO SHARED ${CLHCO_SRC})
TARGET_LINK_LIBRARIES(CLHCO ${LIBS})
SET(LIBRARY_TARGET ${LIBRARY_TARGET} CLHCO)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(test_parse_SRC test_parse.cc)
  ADD_EXECUTABLE(test_parse ${test_parse_SRC})
  TARGET_LINK_LIBRARIES(test_parse CLHCO)
  SET(EXECUTABLE_TARGET ${EXECUTABLE_TARGET} test_parse)
  SET_TARGET_PROPERTIES(test_parse PROPERTIES INSTALL_RPATH "@loader_path/../lib")

  SET(test_render_SRC test_render.cc)
  ADD_EXECUTABLE(test_render ${test_render_SRC})
  TARGET_LINK_LIBRARIES(test_render CLHCO)
  SET(EXECUTABLE_TARGET ${EXECUTABLE_TARGET} test_render)
  SET_TARGET_PROPERTIES(test_render PROPERTIES INSTALL_RPATH "@loader_path/../lib")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

INSTALL(TARGETS ${EXECUTABLE_TARGET} ${LIBRARY_TARGET}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

FILE(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${HEADERS} DESTINATION include/${CMAKE_PROJECT_NAME})